--- a/main/res/layout/add_friends_invite_non_foursquare_user_list_item.xml
+++ b/main/res/layout/add_friends_invite_non_foursquare_user_list_item.xml
@@ -14,7 +14,7 @@
   android:paddingBottom="5dip" 
   android:paddingLeft="10dip"
   > 
-  
+    
   <LinearLayout 
     android:id="@+id/addFriendListItemClickableArea"
     android:layout_width="0dip"
@@ -26,11 +26,10 @@
       android:id="@+id/addFriendNonFoursquareUserListItemName"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:textColor="@color/black_end"
-      android:textAppearance="@android:style/TextAppearance.Small" 
       android:singleLine="true"
       android:ellipsize="marquee"
-      android:layout_gravity="center_vertical" />
+      android:layout_gravity="center_vertical"
+      android:textAppearance="@style/TextViewStyleInviteNonFoursquareUserListItem" />
       
     <TextView
       android:id="@+id/addFriendNonFoursquareUserListItemEmail"
@@ -47,7 +46,7 @@
     android:id="@+id/addFriendNonFoursquareUserListItemBtn"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textAppearance="@android:style/TextAppearance.Small" 
-    android:text="Invite" />
+    android:text="Invite" 
+    style="@style/sendInviteStyle" />
      
 </LinearLayout>
