Updated styles for friend add/invite buttons with small icons for each button.

--- a/main/res/layout/add_friends_invite_non_foursquare_user_list_item.xml
+++ b/main/res/layout/add_friends_invite_non_foursquare_user_list_item.xml
@@ -47,6 +47,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Invite" 
-    style="@style/sendInviteStyle" />
+    style="@style/sendInviteStyle"
+    android:drawableLeft="@drawable/invite_contact" />
      
 </LinearLayout>
