--- a/main/res/layout/add_friends_list_item.xml
+++ b/main/res/layout/add_friends_list_item.xml
@@ -46,13 +46,13 @@
       android:paddingLeft="10dip" />
    
    </LinearLayout>  
-      
   
   <Button
     android:id="@+id/addFriendListItemAddButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text=" Add  " 
-    style="@style/sendInviteStyle" />
+    style="@style/sendInviteStyle"
+    android:drawableLeft="@drawable/add_friend" />
 
 </LinearLayout>
