--- a/main/res/layout/add_friends_invite_non_foursquare_all_list_item.xml
+++ b/main/res/layout/add_friends_invite_non_foursquare_all_list_item.xml
@@ -20,6 +20,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:text="Invite All" 
-    style="@style/sendInviteStyle" />
+    style="@style/sendInviteStyle"
+    android:drawableLeft="@drawable/invite_contact"  />
      
 </LinearLayout>
