--- a/main/res/layout/main_activity.xml
+++ b/main/res/layout/main_activity.xml
@@ -9,12 +9,12 @@
   <TabHost
     android:id="@android:id/tabhost"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    style="@style/tabHostStyle">
+    android:layout_height="fill_parent">
     <TabWidget
       android:id="@android:id/tabs"
       android:layout_width="fill_parent"
-      android:layout_height="wrap_content" />
+      android:layout_height="wrap_content"
+      style="@style/tabHostStyle" /> 
     <FrameLayout
       android:id="@android:id/tabcontent"
       android:layout_width="fill_parent"
