--- a/main/res/xml/authenticator.xml
+++ b/main/res/xml/authenticator.xml
@@ -1,5 +1,5 @@
 <account-authenticator xmlns:android="http://schemas.android.com/apk/res/android"
-    android:accountType="org.joelapenna.foursquared.account"
+    android:accountType="com.joelapenna.foursquared.account"
     android:icon="@drawable/icon"
     android:smallIcon="@drawable/icon"
     android:label="@string/app_name"/>
