--- a/main/res/xml/sync_contacts.xml
+++ b/main/res/xml/sync_contacts.xml
@@ -1,5 +1,5 @@
 <sync-adapter xmlns:android="http://schemas.android.com/apk/res/android"
     android:contentAuthority="com.android.contacts" 
-    android:accountType="org.joelapenna.foursquared.account"
+    android:accountType="com.joelapenna.foursquared.account"
     android:supportsUploading="false"
 /> 
