--- a/main/res/xml/preferences.xml
+++ b/main/res/xml/preferences.xml
@@ -34,6 +34,25 @@
       android:title="@string/preferences_friend_requests_title"
       android:summary="@string/preferences_friend_requests_summary" />
   </PreferenceCategory>
+  
+  <PreferenceCategory
+    android:title="@string/preferences_category_notifications">
+    <CheckBoxPreference
+      android:key="notifications_on"
+      android:persistent="true"
+      android:title="@string/preferences_notifications_title"
+      android:summaryOn="@string/preferences_notifications_summary_on"
+      android:summaryOff="@string/preferences_notifications_summary_off"
+      android:defaultValue="false" />
+    <ListPreference
+      android:key="notifications_refresh_interval_in_minutes" 
+      android:persistent="true"
+      android:title="@string/preferences_notifications_refresh_interval_in_minutes_title"
+      android:summary="@string/preferences_notifications_refresh_interval_in_minutes_summary"
+      android:entries="@array/notifications_refresh_interval_in_minutes" 
+      android:entryValues="@array/notifications_refresh_interval_in_minutes_values"
+      android:defaultValue="30" />
+  </PreferenceCategory>
 
   <PreferenceCategory
     android:title="@string/preferences_other_settings">
