Moved notifications (soon to be called pings) settings to its own activity because we need to do a fetch of the user object before displaying on/off state for pings - which may have been changed on another device etc.

--- a/main/res/xml/preferences.xml
+++ b/main/res/xml/preferences.xml
@@ -37,28 +37,10 @@
   
   <PreferenceCategory
     android:title="@string/preferences_category_notifications">
-    <CheckBoxPreference
+    <com.joelapenna.foursquared.preferences.ClickPreference
       android:key="notifications_on"
-      android:persistent="true"
       android:title="@string/preferences_notifications_title"
-      android:summaryOn="@string/preferences_notifications_summary_on"
-      android:summaryOff="@string/preferences_notifications_summary_off"
-      android:defaultValue="false" />
-    <ListPreference
-      android:key="notifications_refresh_interval_in_minutes" 
-      android:persistent="true"
-      android:title="@string/preferences_notifications_refresh_interval_in_minutes_title"
-      android:summary="@string/preferences_notifications_refresh_interval_in_minutes_summary"
-      android:entries="@array/notifications_refresh_interval_in_minutes" 
-      android:entryValues="@array/notifications_refresh_interval_in_minutes_values"
-      android:defaultValue="30" />
-    <CheckBoxPreference
-      android:key="notifications_vibrate"
-      android:persistent="true"
-      android:title="@string/preferences_notifications_vibrate_title"
-      android:summaryOn="@string/preferences_notifications_vibrate_summary_on"
-      android:summaryOff="@string/preferences_notifications_vibrate_summary_off"
-      android:defaultValue="false" />
+      android:summary="@string/preferences_notifications_summary" />
   </PreferenceCategory>
 
   <PreferenceCategory
