--- a/main/res/layout/pings_list_item.xml
+++ b/main/res/layout/pings_list_item.xml
@@ -4,7 +4,7 @@
   
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
-  android:id="@+id/notification_list_item"
+  android:id="@+id/pings_list_item"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:background="@color/white"
@@ -29,15 +29,13 @@
     <TextView android:id="@+id/text1"
       android:layout_width="wrap_content"
       android:layout_height="fill_parent"
-      android:textAppearance="@style/TextViewStyleNotificationTitle"
-      android:text="dfsfdsfdfsdfd"
+      android:textAppearance="@style/TextViewStylePingsTitle"
       />
       
     <TextView android:id="@+id/text2"
       android:layout_width="wrap_content"
       android:layout_height="fill_parent"
-      android:textAppearance="@style/TextViewStyleNotificationOther"
-      android:text="dfsfdsfdfsdfd"
+      android:textAppearance="@style/TextViewStylePingsOther"
       />
       
   </LinearLayout>
