--- a/main/res/layout/pings_settings_activity.xml
+++ b/main/res/layout/pings_settings_activity.xml
@@ -27,20 +27,20 @@
 	 <TextView
 	   android:layout_width="fill_parent"
 	   android:layout_height="wrap_content"
-	   android:text="@string/notification_settings_instructions" 
+	   android:text="@string/pings_settings_instructions" 
        android:textAppearance="@android:style/TextAppearance.Small"  />
 	     
 	 <CheckBox 
-	   android:id="@+id/notifications_on" 
-	   android:text="@string/notification_settings_on" 
+	   android:id="@+id/pings_on" 
+	   android:text="@string/pings_settings_on" 
 	   android:layout_width="wrap_content" 
 	   android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:textAppearance="@android:style/TextAppearance.Small"  />
 	   
 	 <CheckBox 
-	   android:id="@+id/notifications_vibrate" 
-	   android:text="@string/notification_settings_vibrate" 
+	   android:id="@+id/pings_vibrate" 
+	   android:text="@string/pings_settings_vibrate" 
 	   android:layout_width="wrap_content" 
 	   android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
@@ -50,13 +50,13 @@
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
-       android:text="@string/notification_settings_interval"
+       android:text="@string/pings_settings_interval"
        android:textAppearance="@android:style/TextAppearance.Small"  />
 	 <Spinner 
-	   android:id="@+id/notifications_interval" 
+	   android:id="@+id/pings_interval" 
 	   android:layout_width="fill_parent" 
 	   android:layout_height="wrap_content"
-	   android:prompt="@string/notification_settings_spinner_interval_prompt" />
+	   android:prompt="@string/pings_settings_spinner_interval_prompt" />
 
     </LinearLayout>
     
