--- a/main/res/layout/friends_activity_empty_sdk3.xml
+++ b/main/res/layout/friends_activity_empty_sdk3.xml
@@ -15,7 +15,7 @@
     android:padding="5dip"
     android:orientation="vertical"
     android:gravity="center_horizontal" > 
-   
+    
     <ImageView
       android:id="@+id/friendsActivityEmptyImageView"
   	  android:layout_width="170dip"
@@ -23,7 +23,7 @@
       android:src="@drawable/sadface"
       android:scaleType="fitXY"
       android:layout_marginTop="40dip" />
-    
+   
     <TextView
       android:id="@+id/friendsActivityEmptyTextView"
       android:layout_width="wrap_content"
@@ -35,28 +35,17 @@
       android:paddingBottom="20dip"
       android:text="@string/no_friend_checkins"/>
     
-    <LinearLayout
+    <Button
+      android:id="@+id/friendsActivityEmptyBtnAddFriends"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
-      android:orientation="horizontal"
-      android:paddingLeft="15dip"
-      android:paddingRight="15dip" >
-     
-      <Button
-        android:id="@+id/friendsActivityEmptyBtnAddFriends"
-        android:layout_width="0dip"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/preferences_friend_add_title" />
-   
-      <Button
-        android:id="@+id/friendsActivityEmptyBtnFriendRequests"
-        android:layout_width="0dip"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/preferences_friend_requests_title" />
-  
-    </LinearLayout>
+      android:text="@string/preferences_friend_add_title" />
+ 
+    <Button
+      android:id="@+id/friendsActivityEmptyBtnFriendRequests"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/preferences_friend_requests_title" />
   
   </LinearLayout>
   
