--- a/main/res/values/arrays.xml
+++ b/main/res/values/arrays.xml
@@ -22,6 +22,7 @@
   
   <string-array
     name="pings_refresh_interval_in_minutes">
+    <item>3 minutes</item>
     <item>10 minutes</item>
     <item>30 minutes</item>
     <item>1 hour</item>
@@ -31,6 +32,7 @@
   <!-- Don't change these for localization. -->
   <string-array
     name="pings_refresh_interval_in_minutes_values">
+    <item>3</item>
     <item>10</item>
     <item>30</item>
     <item>60</item>
