Replaced icon on notification list item with b/w version.

--- a/main/res/layout/pings_list_item.xml
+++ b/main/res/layout/pings_list_item.xml
@@ -16,7 +16,7 @@
     android:layout_width="26dip"
     android:layout_height="26dip"
     android:layout_marginRight="8dip"
-    android:src="@drawable/icon"
+    android:src="@drawable/notification_icon"
     android:scaleType="fitXY" 
     />
     
