Added an instructions blurb to give some direction.

--- a/main/res/layout/edit_venue_options_activity.xml
+++ b/main/res/layout/edit_venue_options_activity.xml
@@ -9,7 +9,13 @@
   android:padding="10dip"
   android:orientation="vertical"
   > 
-   
+  
+  <TextView
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:text="@string/edit_venue_options_instructions"
+    android:paddingBottom="15dip" />
+    
   <Button
     android:id="@+id/btnEditVenue"
     android:layout_width="fill_parent"
