Adding updates for rendering nearby recent friend checkins. Changes also affected search venue map too, just updated the map 'callout' when a pin is clicked.

--- a/main/res/values/styles.xml
+++ b/main/res/values/styles.xml
@@ -276,6 +276,18 @@
     <item name="android:textColor">@color/black_end</item>
   </style>
   
+  <style name="TextViewStyleMapCalloutTitle">
+    <item name="android:textSize">20dip</item>
+    <item name="android:textColor">#FFF</item>
+    <item name="android:textStyle">bold</item>
+  </style>
+  
+  <style name="TextViewStyleMapCalloutMessage">
+    <item name="android:textSize">16dip</item>
+    <item name="android:textColor">#FFF</item>
+    <item name="android:textStyle">bold</item>
+  </style>
+  
   <!-- Provides a transparent background for an activity. Without inheriting from this
        base theme style, 1.5 makes the background solid black instead of transparent.
    -->
