--- a/main/res/layout/map_callout_view.xml
+++ b/main/res/layout/map_callout_view.xml
@@ -47,6 +47,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:gravity="center_vertical|right"
+    android:paddingLeft="3dip"
     >
   
     <ImageView
