First pass at adding a filter to the friend requests activity. This should make it easier for the user to locate friend requests they care about.

--- a/main/res/layout/friend_requests_activity.xml
+++ b/main/res/layout/friend_requests_activity.xml
@@ -11,6 +11,13 @@
   android:paddingTop="8dip"
   android:paddingBottom="8dip"
   >
+  
+  <EditText
+    android:id="@+id/editTextFilter"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:hint="Type here to filter"
+    />
 
   <ListView
     android:id="@android:id/list"
