--- a/main/res/layout/checkin_list_item.xml
+++ b/main/res/layout/checkin_list_item.xml
@@ -10,11 +10,11 @@
   android:paddingRight="10dip"
   android:orientation="horizontal"
   style="@style/listItemStyle">
-
+  
   <ImageView
     android:id="@+id/photo"
-	android:layout_height="44dip"
-	android:layout_width="44dip"
+        android:layout_height="44dip"
+        android:layout_width="44dip"
     android:background="@drawable/photo_background"
     android:layout_alignParentTop="true"
     android:layout_alignParentLeft="true"
@@ -27,6 +27,22 @@
     android:gravity="center_vertical"
     android:scaleType="fitXY" />
 
+  <QuickContactBadge
+    android:id="@+id/qcphoto"
+    android:layout_height="50dip"
+	android:layout_width="44dip"
+	android:padding="3dip"
+	android:layout_alignParentTop="true"
+    android:layout_alignParentLeft="true"
+    android:layout_marginLeft="7dip"
+    android:layout_marginTop="5.5dip"
+    android:layout_marginRight="8.5dip"
+    android:layout_marginBottom="15dip"
+    android:src="@drawable/blank_boy"
+    android:gravity="center_vertical"
+	android:scaleType="centerInside"
+	style="?android:attr/quickContactBadgeStyleWindowSmall"/>
+	
   <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
