--- a/main/res/layout/friend_list_item.xml
+++ b/main/res/layout/friend_list_item.xml
@@ -12,14 +12,25 @@
   
   <ImageView
     android:id="@+id/friendListItemPhoto"
-	android:layout_height="44dip"
-	android:layout_width="44dip"
+        android:layout_height="44dip"
+        android:layout_width="44dip"
     android:background="@drawable/photo_background"
     android:layout_alignParentTop="true"
     android:layout_alignParentLeft="true"
     android:padding="3dip"
     android:src="@drawable/blank_boy"
     android:scaleType="fitXY" />
+  
+  <QuickContactBadge
+    android:id="@+id/qcFriendListItemPhoto"
+    android:layout_height="50dip"
+	android:layout_width="44dip"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentLeft="true"
+    android:padding="3dip"
+    android:src="@drawable/blank_boy"
+    android:scaleType="centerInside"
+    style="?android:attr/quickContactBadgeStyleWindowSmall"/>
       
   <TextView
     android:id="@+id/friendListItemName"
