--- a/main/res/layout/mayor_list_item.xml
+++ b/main/res/layout/mayor_list_item.xml
@@ -9,28 +9,47 @@
   android:paddingRight="10dip"
   style="@style/listItemStyle">
     
-  <ImageView
-    android:id="@+id/photo"
-	android:layout_height="44dip"
-	android:layout_width="44dip"
-    android:background="@drawable/photo_background"
-    android:layout_alignParentTop="true"
-    android:layout_alignParentLeft="true"
+  <LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/photochoice"
+    android:orientation="horizontal"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:padding="3dip"
     android:layout_marginLeft="7dip"
     android:layout_marginTop="5.5dip"
     android:layout_marginRight="7.5dip"
     android:layout_marginBottom="15dip"
+    >
+  <QuickContactBadge
+    android:id="@+id/qcphoto"
+	android:layout_height="50dip"
+	android:layout_width="44dip"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentLeft="true"
+    android:src="@drawable/blank_boy"
+    android:gravity="center_vertical"
+    android:scaleType="centerInside"
+    style="?android:attr/quickContactBadgeStyleWindowSmall"/>
+    
+  <ImageView
+    android:id="@+id/photo"
+        android:layout_height="44dip"
+        android:layout_width="44dip"
+    android:background="@drawable/photo_background"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentLeft="true"
     android:src="@drawable/blank_boy"
     android:gravity="center_vertical"
     android:scaleType="fitXY" />
     
+    </LinearLayout>
   <ImageView
     android:id="@+id/crown"
 	android:layout_height="16dip"
 	android:layout_width="16dip"
-    android:layout_toRightOf="@id/photo"
-    android:layout_alignTop="@id/photo"
+    android:layout_toRightOf="@id/photochoice"
+    android:layout_alignTop="@id/photochoice"
     android:layout_alignWithParentIfMissing="true"
     android:scaleType="fitXY" 
     android:src="@drawable/crown_small"
@@ -41,7 +60,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_toRightOf="@id/crown"
-    android:layout_alignTop="@id/photo"
+    android:layout_alignTop="@id/photochoice"
     android:layout_alignParentRight="true"
     android:layout_alignWithParentIfMissing="true"
     android:gravity="center_vertical"
