--- a/main/res/layout/checkin_list_item.xml
+++ b/main/res/layout/checkin_list_item.xml
@@ -11,21 +11,27 @@
   android:orientation="horizontal"
   style="@style/listItemStyle">
 
-  <com.joelapenna.foursquared.widget.SometimesQuickContactBadge
-    android:id="@+id/photo"
-    android:layout_height="50dip"
-    android:layout_width="44dip"
-    android:background="@drawable/photo_background"
-    android:layout_alignParentTop="true"
-    android:layout_alignParentLeft="true"
-    android:padding="3dip"
-    android:layout_marginLeft="7dip"
-    android:layout_marginTop="5.5dip"
-    android:layout_marginRight="8.5dip"
-    android:layout_marginBottom="15dip"
-    android:src="@drawable/blank_boy"
-    android:gravity="center_vertical"
-    android:scaleType="centerInside"/>
+  <FrameLayout
+        android:id="@+id/photo"
+  		android:layout_height="50dip"
+	    android:layout_width="44dip"
+	    android:layout_alignParentTop="true"
+	    android:layout_alignParentLeft="true"
+	    android:padding="3dip"
+	    android:layout_marginLeft="7dip"
+	    android:layout_marginTop="5.5dip"
+	    android:layout_marginRight="8.5dip"
+	    android:layout_marginBottom="15dip">
+  	<com.joelapenna.foursquared.widget.SometimesQuickContactBadge
+	    android:id="@+id/sometimes_quickcontact"
+	    android:layout_height="fill_parent"
+	    android:layout_width="fill_parent"
+	    android:background="@drawable/photo_background"
+	    android:src="@drawable/blank_boy"
+	    android:gravity="center_vertical"
+	    android:scaleType="centerInside"/>
+  </FrameLayout>
+  
 	
   <LinearLayout
     android:layout_width="fill_parent"
