--- a/main/res/layout/mayor_list_item.xml
+++ b/main/res/layout/mayor_list_item.xml
@@ -9,9 +9,9 @@
   android:paddingRight="10dip"
   style="@style/listItemStyle">
 
-  <com.joelapenna.foursquared.widget.SometimesQuickContactBadge
+  <FrameLayout
     android:id="@+id/photo"
-	android:layout_height="50dip"
+    android:layout_height="50dip"
 	android:layout_width="44dip"
     android:padding="3dip"
     android:layout_alignParentTop="true"
@@ -20,10 +20,16 @@
     android:layout_marginTop="5.5dip"
     android:layout_marginRight="7.5dip"
     android:layout_marginBottom="15dip"
-    android:src="@drawable/blank_boy"
-    android:gravity="center_vertical"
-    android:scaleType="centerInside"/>
-    
+  >
+      <com.joelapenna.foursquared.widget.SometimesQuickContactBadge
+        android:id="@+id/sometimes_quickcontact"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:src="@drawable/blank_boy"
+        android:gravity="center_vertical"
+        android:scaleType="centerInside"/>
+  </FrameLayout>
+
   <ImageView
     android:id="@+id/crown"
 	android:layout_height="16dip"
