--- a/main/res/layout/mayor_list_item.xml
+++ b/main/res/layout/mayor_list_item.xml
@@ -9,7 +9,7 @@
   android:paddingRight="10dip"
   style="@style/listItemStyle">
 
-  <FrameLayout
+  <com.joelapenna.foursquared.widget.MaybeContactView
     android:id="@+id/photo"
     android:layout_height="50dip"
 	android:layout_width="44dip"
@@ -20,15 +20,7 @@
     android:layout_marginTop="5.5dip"
     android:layout_marginRight="7.5dip"
     android:layout_marginBottom="15dip"
-  >
-      <com.joelapenna.foursquared.widget.SometimesQuickContactBadge
-        android:id="@+id/sometimes_quickcontact"
-        android:layout_height="fill_parent"
-        android:layout_width="fill_parent"
-        android:src="@drawable/blank_boy"
-        android:gravity="center_vertical"
-        android:scaleType="centerInside"/>
-  </FrameLayout>
+  />
 
   <ImageView
     android:id="@+id/crown"
