--- a/main/res/layout/tip_list_item.xml
+++ b/main/res/layout/tip_list_item.xml
@@ -11,21 +11,14 @@
   android:paddingBottom="5dip"
   style="@style/listItemStyle" >
 
-  <FrameLayout
+  <com.joelapenna.foursquared.widget.MaybeContactView
     android:id="@+id/tipPhoto"
     android:layout_height="52dip"
-    android:layout_width="46dip">
+    android:layout_width="46dip"
     android:layout_alignParentTop="true"
     android:layout_alignParentLeft="true"
-    android:padding="3dip"
-      <com.joelapenna.foursquared.widget.SometimesQuickContactBadge
-        android:id="@+id/sometimes_quickcontact"
-        android:layout_height="fill_parent"
-        android:layout_width="fill_parent"
-        android:background="@drawable/photo_background"
-        android:src="@drawable/blank_boy"
-        android:scaleType="centerInside" />
-  </FrameLayout>
+    android:padding="3dip"/>
+
 
     <LinearLayout
       android:layout_width="fill_parent"
