--- a/main/res/xml/preferences.xml
+++ b/main/res/xml/preferences.xml
@@ -76,6 +76,10 @@
       android:title="@string/preferences_changelog"
       android:summary="@string/preferences_changelog_summary" />
     <com.joelapenna.foursquared.preferences.ClickPreference
+      android:key="help"
+      android:title="@string/help_label"
+      android:summary="@string/help_preference_summary" />
+    <com.joelapenna.foursquared.preferences.ClickPreference
       android:key="send_feedback"
       android:title="@string/feedback_label"
       android:summary="@string/send_feedback_preference_summary" />
