Added tos and privacy links, made sure parameters received in BrowsableActivity get url decoded.

--- a/main/res/xml/preferences.xml
+++ b/main/res/xml/preferences.xml
@@ -84,9 +84,13 @@
       android:title="@string/feedback_label"
       android:summary="@string/send_feedback_preference_summary" />
     <com.joelapenna.foursquared.preferences.ClickPreference
+      android:key="tos_privacy"
+      android:title="@string/preferences_tos_label"
+      android:summary="@string/preferences_tos_summary" />
+    <com.joelapenna.foursquared.preferences.ClickPreference
       android:key="logout"
       android:title="@string/preferences_logout_title"
       android:summary="@string/preferences_logout_summary" />
   </PreferenceCategory>
-
+  
 </PreferenceScreen>
