--- a/main/res/xml/preferences.xml
+++ b/main/res/xml/preferences.xml
@@ -36,7 +36,11 @@
   </PreferenceCategory>
   
   <PreferenceCategory
-    android:title="@string/preferences_category_pings">
+    android:title="@string/preferences_category_user_info">
+    <com.joelapenna.foursquared.preferences.ClickPreference
+      android:key="profile_settings"
+      android:title="@string/preferences_profile_settings_label"
+      android:summary="@string/preferences_profile_settings_summary" />
     <com.joelapenna.foursquared.preferences.ClickPreference
       android:key="pings_on"
       android:title="@string/preferences_pings_title"
