adjust clickable areas for widget stats

--- a/main/res/values/styles.xml
+++ b/main/res/values/styles.xml
@@ -337,8 +337,8 @@
     <item name="android:text">n/a</item>
     <item name="android:textColor">@android:color/white</item>
     <item name="android:layout_width">wrap_content</item>
-    <item name="android:layout_height">wrap_content</item>
-    <item name="android:layout_marginTop">53dip</item>
+    <item name="android:layout_height">74dip</item>
+    <item name="android:gravity">bottom</item>
    </style>
 
 	<style name="MediumCountStyle">
@@ -346,8 +346,8 @@
 		<item name="android:text">n/a</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginTop">43dip</item>
+        <item name="android:layout_height">68dip</item>
+        <item name="android:gravity">bottom</item>
 	</style>
 	 <style name="WidgetStatsDialogStyle">
       <item name="android:layout_width">fill_parent</item>
